fix: z-index mobile menu

--- a/src/components/MobileNavigation/MobileNavigation.module.css
+++ b/src/components/MobileNavigation/MobileNavigation.module.css
@@ -9,6 +9,7 @@
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     display: block;
+    z-index: 2;
   }
 
   .nav {
